# aoc20

./: .gitignore  Makefile  Makefile.template
common/include/: attrs.h  panic.h
day1/: Makefile  day1.c
day1/day1/: Cargo.toml  build.rs
day1/day1/src/: main.rs
day10/: Cargo.toml  Makefile
day10/src/: diff.rs  input.rs  main.rs  part2.rs
day11/: Makefile  day11.c
day12/: Makefile  day12.c
day2/: Cargo.toml  Makefile
day2/src/: main.rs  rule.rs
day3/: Makefile  day3.cpp
day4/: Cargo.toml  Makefile
day4/src/: error.rs  main.rs  passport.rs
day5/: Makefile  day5.c
day6/: Makefile  day6.c
day7/: Cargo.toml  Makefile
day7/src/: bag.rs  main.rs  parse.rs
day8/: Makefile  day8.c
day9/: Makefile  day9.c  map.c  map.h
fuck7/: Cargo.toml
fuck7/src/: bag.rs  main.rs  parse.rs
