[package]
name = "day10"
version = "0.1.0"
authors = ["Avril <flanchan@cumallover.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

part2=["num_cpus", "semaphore"]
test = []

[dependencies]
ad-hoc-iter = "0.2.2"
cfg-if = "1.0.0"
num_cpus = {version = "1.13.0", optional = true}
semaphore = {version = "0.4.0", optional = true}
smallmap = "1.2.1"
